# bitstruct

./: bitstruct.hpp  bitstruct_test.cpp  meson.build
